global.cpp: Ensure qApp does not emit signal because of local QEventLoop

BUG: 469656
(cherry picked from commit dec80fb0f940ff4e71032c2d3544f0d60a05c4ce)